--- a/index.html
+++ b/index.html
@@ -688,6 +688,14 @@
 								<tbody>
 								<tr>
 									<td>
+										<b>Midwest Climate Adaptation Science Center Annual Gathering</b><font color="#afbcc0"> • </font>Lansing, Michigan<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Bateman B, Feng E, Grand J, Reault S, Saunders S, Taylor L, Wu J, Wilsey C.
+											<i>Nature-based solutions: Opportunities to benefit biodiversity, climate mitigation, and human communities across the Midwest.</i></p>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">August 2024</td>
+								</tr>
+								<tr>
+									<td>
 										<b>The Wildlife Society’s 29th Annual Conference</b><font color="#afbcc0"> • </font>Spokane, Washington<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Spence ES, Travis J, Beier P, Gregory AJ, Bullock J.
 											<i>An enhanced Methodology for Applied Modeling of Structural and Functional Connectivity.</i></p>
