--- a/index.html
+++ b/index.html
@@ -205,14 +205,13 @@
 										<font color="#afbcc0"> • </font>Remote
 										<br>
 										<ul>
-											<li>Collaborates across the internal and external Audubon network to strengthen partnerships and support regional, national, and hemispheric bird conservation initiatives.</li>
+											<li>Provides technical, scientific, and liaison expertise across Audubon’s internal and external network to support regional, national, and hemispheric bird conservation initiatives.</li>
 											<li>Supports on-the-ground conservation and management actions.</li>
 										</ul>
 										<ol>
-											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products to inform landscape-scale conservation planning and decision-making.
-												
-												projects across Audubon's national Science Team.</li>
-											<li>Leas and/or provide technical support to collect, manage, process, analyze, and communicate results of geospatial data to diverse audiences.</li>
+											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products that inform landscape-scale conservation planning and decision-making for
+												managers on-the-ground.</li>
+											<li>Utilizes ArcGIS, R, and Python to collect, manage, process, analyze, and communicate results of geospatial data science to diverse audiences.</li>
 										</ol>
 										<ul>
 											<li>Participates in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group that develops and/or implements processes that integrate Audubon’s EDIB Conservation Principles into our science and partnerships.</li>
