--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 											<li>Provides technical, scientific, and liaison expertise across Audubon’s internal and external network to support regional, national, and hemispheric bird conservation initiatives.</li>
 										</ul>
 										<ol>
-											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products that inform landscape-scale conservation planning and decision-making for
-												managers on-the-ground.</li>
+											<li>Investigates how climate and land-use changes impact birds and ecosystems throughout the Americas to inform landscape-scale conservation planning and decision-making.</li>
+											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products that support management actions on-the-ground.</li>
 											<li>Utilizes ArcGIS, R, and Python to collect, manage, process, analyze, and communicate results of geospatial data science to diverse audiences.</li>
 										</ol>
 										<ul>
