--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 										</ul>
 										<ol>
 											<li>Investigates how climate and land-use changes impact birds and ecosystems throughout the Americas to inform landscape-scale conservation planning and decision-making.</li>
-											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products that support management actions on-the-ground.</li>
+											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products for management actions on-the-ground.</li>
 											<li>Utilizes ArcGIS, R, and Python to collect, manage, process, analyze, and communicate results of geospatial data science to diverse audiences.</li>
 										</ol>
 										<ul>
