--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 											Climate Watch</a></i>.</li>
 										</ul>
 										<ol>
-											<li>Identified data gaps in terms of target species geographic coverage and demographic representation of volunteers to strategically implement improvements to the program.</li>
+											<li>Identified data gaps in terms of target species geographic coverage and demographic representation of volunteers to strategically improve the program.</li>
 										</ol>
 										<ul>
 											<li>Participates in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group that develops and/or implements processes that integrate Audubon’s EDIB Conservation Principles into our science and partnerships.</li>
