--- a/index.html
+++ b/index.html
@@ -700,6 +700,16 @@
 								<tbody>
 								<tr>
 									<td>
+										<b>American Ornithological Society Annual Meeting</b><font color="#afbcc0"> • </font>Estes Park, Colorado<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Farr CM, LeBaron GS, Michel NL, Saunders SP, Bateman BL.
+											<i>Climate Watch: A community science program where birding is for everybody and every body.</i></p>
+										
+
+									</td>
+									<td style="text-align: center; vertical-align: middle;">October 2024</td>
+								</tr>
+								<tr>
+									<td>
 										<b>Midwest Climate Adaptation Science Center Annual Gathering</b><font color="#afbcc0"> • </font>Lansing, Michigan<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Bateman B, Feng E, Grand J, Reault S, Saunders S, Taylor L, Wu J, Wilsey C.
 											<i>Nature-based solutions: Opportunities to benefit biodiversity, climate mitigation, and human communities across the Midwest.</i></p>
