--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 					<!-- CERTIFICATIONS -->
 					<section>
-						<h6>Certification</h6>
+						<h6>Certifications</h6>
 						<div class="table-wrapper">
 							<table>
 								<col style="width:85%">
@@ -168,6 +168,18 @@
 								</tr>
 								</thead>
 								<tbody>
+								<tr>
+									<td>
+										<b>Cartography</b> • <b>MOOC</b> (ESRI)<br>
+										<dl>
+											<dd>
+												Sections: <i>Maths for Map Makers, The Language of Graphics, Labels and Composition, 
+												Going 3D, Mapping Movement and Change</i> (audit)
+											</dd>
+										</dl>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">May 2024</td>
+								</tr>									
 								<tr>
 									<td>
 										<b>Geographic Information Systems</b> • <b>GIS</b> (UNT)<br>
