--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 										<dl>
 											<dd>
 												Sections: <i>Maths for Map Makers, The Language of Graphics, Labels and Composition, 
-												Going 3D, Mapping Movement and Change</i> (audit)
+												Going 3D, Mapping Movement and Change</i>
 											</dd>
 										</dl>
 									</td>
