--- a/index.html
+++ b/index.html
@@ -685,12 +685,21 @@
 								</tr>
 								</thead>
 								<tbody>
+																	<tr>
+								<td>
+									<p class="hangingindent">Seavy NE, Wojcicki S, Madden A, Bateman BL, Fox K, FullerJ, George G, Haney C, 
+										<font color="#7e9094"><b>Long AM</b></font>, Lyons DE, Rose S (2025) 
+										<a target="_blank" rel="noopener noreferrer" href="https://media.audubon.org/2025-01/Final_OffshoreWind_Report.pdf?_gl=1*uxfj2k*_gcl_au*MTgxMzU5ODQyMy4xNzM0Mzg0OTA3*_ga*NzU0MDg5ODcuMTY5MzMyODg1Ng..*_ga_X2XNL2MWTT*MTczNjM2MTgyMC40OTcuMC4xNzM2MzYxODIwLjYwLjAuMA..">
+										Birds and offshore wind report</a>.
+										Developing the offshore wind that birds need. National Audubon Society, New York.</p>
+									</td>
+								</tr>
 								<tr>
 								<td>
-									<p class="hangingindent">Baxter-Slye J with Contributions from <font color="#7e9094"><b>Long AM</b></font>, Kalta B (2022).
+									<p class="hangingindent">Baxter-Slye J with Contributions from <font color="#7e9094"><b>Long AM</b></font>, Kalta B (2022)
 										<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 											Field & laboratory methods for environmental science for non-majors (2nd edition)</a>.
-										Department of Biological Sciences at University of North Texas. Kendall Hunt Publishing.</p>
+										Department of Biological Sciences, University of North Texas, Kendall Hunt Publishing.</p>
 									</td>
 								</tr>
 								</tfoot>
