--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@
 									<p class="hangingindent">Seavy NE, Wojcicki S, Madden A, Bateman BL, Fox K, FullerJ, George G, Haney C, 
 										<font color="#7e9094"><b>Long AM</b></font>, Lyons DE, Rose S (2025) 
 										<a target="_blank" rel="noopener noreferrer" href="https://media.audubon.org/2025-01/Final_OffshoreWind_Report.pdf?_gl=1*uxfj2k*_gcl_au*MTgxMzU5ODQyMy4xNzM0Mzg0OTA3*_ga*NzU0MDg5ODcuMTY5MzMyODg1Ng..*_ga_X2XNL2MWTT*MTczNjM2MTgyMC40OTcuMC4xNzM2MzYxODIwLjYwLjAuMA..">
-										Birds and offshore wind report</a>.
-										Developing the offshore wind that birds need. National Audubon Society, New York.</p>
+										Audubon’s Birds and Offshore Wind Report: Developing the Offshore Wind Birds Need</a>.
+										National Audubon Society, New York.</p>
 									</td>
 								</tr>
 								<tr>
