--- a/index.html
+++ b/index.html
@@ -236,8 +236,15 @@
 											<li>Participates in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group that develops and/or implements processes that integrate Audubon’s EDIB Conservation Principles into our science and partnerships.</li>
 											<li>Joined Audubon's Access <i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/about/edi">
 											Affinity Group</a></i> leadership team in July 2024.</li>
-
 										</ul>
+										ol>
+										<li>Lead a community for people within the Audubon network to come together to discuss, mobilize, and advocate for disabled people, 
+												including invisible disabilities and neurodivergent identities.</li>
+										<li>Promote the mission of bringing birding opportunities to everyone and help ensure that Audubon centers, birding communities, and events nationwide are disability inclusive.</li>
+										</ol>
+											
+
+
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2023<br> - <br>Present</td>
 								</tr>								
