--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
 						<tr>
 							<td style="text-align: center; vertical-align: middle;">
 								Geospatial Processing<br>
-								Programming Languages<br>
+								Data Science
+								<br>
 								Web Application Development
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
 								Cartography<br>
-								Science Communication<br>
-								Pedagogy
+								Programming Languages<br>
+								Science Communication
 
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
