--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 						<dt>Technical Skills</dt>
 						<dd>
 							<p>ESRI ArcGIS Desktop and Online, Spatial and Non-spatial Data Management,
-								Data Analysis and Visualization, Adobe Illustrator,
+								Data Analysis and Visualization,
 								Spatial and Statistical Analysis, Image Analysis, Carbon Analysis, ModelBuilder,
 								Remote Sensing, Digitizing,
 								Python, SQL, R, HTML, CSS, JavaScript, SCSS, QGIS, Troubleshooting,
-								Microsoft Office Suite (Access, Excel, PowerPoint, Word)</p>
+								Microsoft Office Suite (Access, Excel, PowerPoint, Word), Adobe Illustrator,</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
