--- a/index.html
+++ b/index.html
@@ -226,11 +226,12 @@
 											<li>Utilizes ArcGIS, R, and Python to collect, manage, process, analyze, and communicate results of geospatial data science to diverse audiences.</li>
 										</ol>
 										<ul>
-											<li>Developed a process using R and Python to improve data integrity collected through Audubon's community science program
+											<li>Developed a data cleaning process using R and Python to improve data integrity collected through Audubon's community science program
 												<i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/community-science/climate-watch">
 											Climate Watch</a></i>.</li>
 										</ul>
 										<ol>
+											<li>Processed, re-processed, and managed data collected during the 2016-2024 summer and winter survey periods.</li>
 											<li>Identified data gaps in terms of target species geographic coverage and demographic representation of volunteers to strategically improve the program.</li>
 										</ol>
 										<ul>
