--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
 										</ul>
 										<ol>
 											<li>Processed, re-processed, and managed data collected during the 2016-2024 summer and winter survey periods.</li>
-											<li>Identified data gaps in terms of target species geographic coverage and demographic representation of volunteers to strategically improve the program.</li>
+											<li>Identified data gaps in terms of <i><a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
+											Climate Watch Target Species </a></i>
 										</ol>
 										<ul>
 											<li>Participates in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group that develops and/or implements processes that integrate Audubon’s EDIB Conservation Principles into our science and partnerships.</li>
