--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 								<tbody>
 																	<tr>
 								<td>
-									<p class="hangingindent">Seavy NE, Wojcicki S, Madden A, Bateman BL, Fox K, FullerJ, George G, Haney C, 
+									<p class="hangingindent">Seavy NE, Wojcicki S, Madden A, Bateman BL, Fox K, Fuller J, George G, Haney C, 
 										<font color="#7e9094"><b>Long AM</b></font>, Lyons DE, Rose S (2025) 
 										<a target="_blank" rel="noopener noreferrer" href="https://media.audubon.org/2025-01/Final_OffshoreWind_Report.pdf?_gl=1*uxfj2k*_gcl_au*MTgxMzU5ODQyMy4xNzM0Mzg0OTA3*_ga*NzU0MDg5ODcuMTY5MzMyODg1Ng..*_ga_X2XNL2MWTT*MTczNjM2MTgyMC40OTcuMC4xNzM2MzYxODIwLjYwLjAuMA..">
 										Audubon’s Birds and Offshore Wind Report: Developing the Offshore Wind Birds Need</a>.
@@ -794,6 +794,36 @@
 							</table>
 						</div>
 					</section>
+
+					<!-- TECHNICAL REPORTS -->
+					<section>
+						<h6>Technical Reports</h6>
+						<div class="table-wrapper">
+							<table>
+								<col style="width:100%">
+								<thead>
+								<tr>
+								</tr>
+								</thead>
+								<tbody>
+																	<tr>
+								<td>
+									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font> (2024) 
+										<a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
+										Climate Watch Target Species 2016-2023</a>. National Audubon Society, New York.</p>
+									</td>
+								</tr>
+								<tr>
+								<td>
+									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Reault S (2025)
+											Impacts of Climate Change on Hammonasset Beach State Park in Connecticut: Improving Coastal Resiliency.
+										National Audubon Society, New York.</p>
+									</td>
+								</tr>
+								</tfoot>
+							</table>
+						</div>
+					</section>					
 
 					<section>
 						<h6>Professional Memberships & Organizations</h6>
