--- a/index.html
+++ b/index.html
@@ -86,19 +86,17 @@
 					<dl>
 						<dt>Technical Skills</dt>
 						<dd>
-							<p>ESRI ArcGIS Desktop and Online, Spatial and Non-spatial Data Management,
-								Data Analysis and Visualization,
-								Spatial and Statistical Analysis, Image Analysis, Carbon Analysis, ModelBuilder,
-								Remote Sensing, Digitizing,
-								Python, SQL, R, HTML, CSS, JavaScript, SCSS, QGIS, Troubleshooting,
-								Microsoft Office Suite (Access, Excel, PowerPoint, Word), Adobe Illustrator,</p>
+							<p>R, Python, SQL, ESRI ArcGIS Desktop and Online, Spatial and Non-spatial Data Management,
+								Data Analysis and Visualization, Spatial and Statistical Analysis, Image Analysis, 
+								Remote Sensing, Digitizing, Carbon Analysis, SQL, HTML, CSS, JavaScript, SCSS, QGIS, 
+								Troubleshooting, Microsoft Office Suite (Access, Excel, PowerPoint, Word), Adobe Illustrator</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
 							<p>GPS Data Collection, Timber Cruise, Water Quality, Soil Health, Habitat Assessment
 								(Aquatic Freshwater, Forest, Prairie), Prairie Restoration,
 								Small Mammal Trapping and Handling, Genetic Sampling, Mist Netting, Bird/Bat Handling,
-								Bird Banding, Morphometric Data Collection (Avians, Bats, Small Mammals), Blood Sampling,
+								Bird Banding, Morphometric Data Collection (Avians, Bats, Small Mammals), Avian Blood Sampling,
 								Radio Telemetry, Acoustic Monitoring, Camera Trapping, Remote Fieldwork</p>
 						</dd>
 						<dt>Soft Skills</dt>
