--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 											Affinity Group</a></i> leadership team in July 2024.</li>
 										</ul>
 										<ol>
-										<li>Lead a community for people within the Audubon network to come together to discuss, mobilize, and advocate for disabled people, 
+										<li>Leads a community for people within the Audubon network to come together to discuss, mobilize, and advocate for disabled people, 
 												including invisible disabilities and neurodivergent identities.</li>
-										<li>Promote the mission of bringing birding opportunities to everyone and help ensure that Audubon centers, birding communities, and events nationwide are disability inclusive.</li>
+										<li>Promotes the mission of bringing birding opportunities to everyone and help ensure that Audubon centers, birding communities, and events nationwide are inclusive and accessible.</li>
 										</ol>
 											
 
