--- a/index.html
+++ b/index.html
@@ -729,6 +729,26 @@
 								<tbody>
 								<tr>
 									<td>
+										<b>Audubon Leadership Conference</b><font color="#afbcc0"> • </font>Montréal, Canada<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Ryan M, Montes de Oca J, Brace L, Rose S.
+											<i>Natural Climate Solutions: Protecting Forests, Grasslands, and Wetlands That Do Double Duty for Birds and People.</i></p>
+										
+
+									</td>
+									<td style="text-align: center; vertical-align: middle;">July 2025</td>
+								</tr>
+								<tr>
+									<td>
+										<b>Audubon Leadership Conference</b><font color="#afbcc0"> • </font>Montréal, Canada<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Haywood B.
+											<i>Getting Started with Audubon's Climate Watch Program.</i></p>
+										
+
+									</td>
+									<td style="text-align: center; vertical-align: middle;">July 2025</td>
+								</tr>
+								<tr>
+									<td>
 										<b>American Ornithological Society Annual Meeting</b><font color="#afbcc0"> • </font>Estes Park, Colorado<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Farr CM, LeBaron GS, Michel NL, Saunders SP, Bateman BL.
 											<i>Climate Watch: A community science program where birding is for everybody and every body.</i></p>
