--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 								Web Application Development
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Cartography<br>
-								Programming Languages<br>
+								Data Visualization<br>
+								Project Management<br>
 								Science Communication
 
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Data Analysis<br>
+								Cartography<br>
 								Field Sampling<br>
 								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessment</a>
 							</td>
