--- a/index.html
+++ b/index.html
@@ -65,18 +65,17 @@
 						<tr>
 							<td style="text-align: center; vertical-align: middle;">
 								Geospatial Processing<br>
-								Data Science
-								<br>
-								Web Application Development
+								Data Management<br>
+								Project Management
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Data Visualization<br>
-								Project Management<br>
+								Spatial & Statistical Analysis<br>
+								Data Visualization & Cartography<br>
 								Science Communication
 
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Cartography<br>
+								Data Mining & Analysis<br>
 								Field Sampling<br>
 								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessment</a>
 							</td>
