--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
 											Climate Watch</a></i>.</li>
 										</ul>
 										<ol>
-											<li>Processed, re-processed, and managed data collected during the 2016-2024 summer and winter survey periods.</li>
-											<li>Identified data gaps in terms of <i><a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
-											Climate Watch Target Species</a></i> geographic survey coverage and demographic representation of volunteers to strategically improve the program.
+											<li>Cleaned, analyzed, and managed >800,000 data points collected since 2016.</li>
+											<li>Identified data gaps in <i><a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
+											Climate Watch Target Species</a></i> survey coverage and the demographic representation of volunteers to implement strategic improvements to the program.
 										</ol>
 										<ul>
 											<li>Participates in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group that develops and/or implements processes that integrate Audubon’s EDIB Conservation Principles into our science and partnerships.</li>
@@ -855,6 +855,14 @@
 								<tbody>
 								<tr>
 									<td>
+										<b>Michigan Audubon</b>
+										<font color="#afbcc0"> • </font>Michigan
+
+									</td>
+									<td style="text-align: center; vertical-align: middle;">2025</td>
+								</tr>
+								<tr>
+									<td>
 										<b>The Wildlife Society</b>
 										<font color="#afbcc0"> • </font>North America
 
@@ -900,3 +908,4 @@
 
 	</body>
 </html>
+
