--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
 											Affinity Group</a></i> leadership team in July 2024.</li>
 										</ul>
 										<ol>
-										<li>Leads a community for people within the Audubon network to come together to discuss, mobilize, and advocate for disabled people, 
-												including invisible disabilities and neurodivergent identities.</li>
+										<li>Leads a community for people within the Audubon network to come together to discuss, mobilize, and advocate for accessibility.</li>
 										<li>Promotes the mission of bringing birding opportunities to everyone and help ensure that Audubon centers, birding communities, and events nationwide are inclusive and accessible.</li>
 										</ol>
 											
@@ -912,5 +911,6 @@
 
 	</body>
 </html>
+
 
 
