--- a/index.html
+++ b/index.html
@@ -890,9 +890,9 @@
 						<div class="inner">
 							<section>
 								<ul class="icons">
-									<li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_AmandaMLong" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<!-- <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_AmandaMLong" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
 									<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/amanda--long/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/AmandaMLong" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<!-- <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/AmandaMLong" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li> -->
 									<li><a target="_blank" rel="noopener noreferrer" href="mailto:along3460@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 
@@ -911,6 +911,7 @@
 
 	</body>
 </html>
+
 
 
 
