--- a/index.html
+++ b/index.html
@@ -713,6 +713,60 @@
 						</div>
 					</section>
 
+					<!-- TECHNICAL REPORTS -->
+					<section>
+						<h6>Technical Reports</h6>
+						<div class="table-wrapper">
+							<table>
+								<col style="width:100%">
+								<thead>
+								<tr>
+								</tr>
+								</thead>
+								<tbody>
+																	<tr>
+								<td>
+									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font> (2024) 
+										<a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
+										Climate Watch Target Species 2016-2023</a>. National Audubon Society, New York.</p>
+									</td>
+								</tr>
+								<tr>
+								<td>
+									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Reault S (2025)
+										<a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1805657941529?s=jvuiioajakxo2m7qxbb1lsboh5plzb01">
+											Impacts of Climate Change on Hammonasset Beach State Park in Connecticut: Improving Coastal Resiliency</a>.
+										National Audubon Society, New York.</p>
+									</td>
+								</tr>
+								</tfoot>
+							</table>
+						</div>
+					</section>	
+
+					<!-- MEDIA -->
+					<section>
+						<h6>Media</h6>
+						<div class="table-wrapper">
+							<table>
+								<col style="width:100%">
+								<thead>
+								<tr>
+								</tr>
+								</thead>
+								<tbody>
+																	<tr>
+								<td>
+									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font> (2025) 
+										<a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/news/decade-watching-birds-and-watching-out-them">
+										A Decade of Watching Birds—and Watching Out for Them</a>. National Audubon Society, New York.</p>
+									</td>
+								</tr>
+								</tfoot>
+							</table>
+						</div>
+					</section>						
+					
 					<!-- PRESENTATIONS -->
 					<section>
 						<h6>Presentations</h6>
@@ -813,37 +867,7 @@
 								</tfoot>
 							</table>
 						</div>
-					</section>
-
-					<!-- TECHNICAL REPORTS -->
-					<section>
-						<h6>Technical Reports</h6>
-						<div class="table-wrapper">
-							<table>
-								<col style="width:100%">
-								<thead>
-								<tr>
-								</tr>
-								</thead>
-								<tbody>
-																	<tr>
-								<td>
-									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font> (2024) 
-										<a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
-										Climate Watch Target Species 2016-2023</a>. National Audubon Society, New York.</p>
-									</td>
-								</tr>
-								<tr>
-								<td>
-									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Reault S (2025)
-											Impacts of Climate Change on Hammonasset Beach State Park in Connecticut: Improving Coastal Resiliency.
-										National Audubon Society, New York.</p>
-									</td>
-								</tr>
-								</tfoot>
-							</table>
-						</div>
-					</section>					
+					</section>				
 
 					<section>
 						<h6>Professional Memberships & Organizations</h6>
@@ -911,6 +935,7 @@
 
 	</body>
 </html>
+
 
 
 
