--- a/index.html
+++ b/index.html
@@ -691,7 +691,18 @@
 								</tr>
 								</thead>
 								<tbody>
-																	<tr>
+
+								<tr>
+								<td>
+									<p class="hangingindent">Spence ES, Beier P, Broughto, RK, Bullock JM, Gregory AJ, Travis JMJ, Martínez-Fonseca JG, Fernández-Mena MA, Loza-Molina JC, Gutiérrez-López LE, Chávez-Velásquez MF,
+										<font color="#7e9094"><b>Long AM</b></font> (2025) 
+										<a target="_blank" rel="noopener noreferrer" href="https://catalogue.ceh.ac.uk/documents/a6a024d9-180f-431c-9d7e-f83439c2de45">
+										Monitoring data from small mammal trapping in forest habitats in Nicaragua, 2022-2023</a>.
+										NERC EDS Environmental Information Data Centre.</p>
+									</td>
+								</tr>
+									
+								<tr>
 								<td>
 									<p class="hangingindent">Seavy NE, Wojcicki S, Madden A, Bateman BL, Fox K, Fuller J, George G, Haney C, 
 										<font color="#7e9094"><b>Long AM</b></font>, Lyons DE, Rose S (2025) 
@@ -935,6 +946,7 @@
 
 	</body>
 </html>
+
 
 
 
