--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 						<tr>
 							<td style="text-align: center; vertical-align: middle;">
 								Geospatial Processing<br>
-								Data Management<br>
+								Programming Languages (R, Python, SQL)<br>
 								Project Management
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Spatial & Statistical Analysis<br>
+								Spatial & Non-spatial Data Management<br>
 								Data Visualization & Cartography<br>
 								Science Communication
 
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Data Mining & Analysis<br>
+								Spatial & Statistical Analysis<br>
 								Field Sampling<br>
 								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessment</a>
 							</td>
@@ -946,6 +946,7 @@
 
 	</body>
 </html>
+
 
 
 
