--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<tr>
 							<td style="text-align: center; vertical-align: middle;">
 								Geospatial Processing<br>
-								Programming Languages (R, Python, SQL)<br>
+								Programming Languages<br>
 								Project Management
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
@@ -735,11 +735,20 @@
 								</tr>
 								</thead>
 								<tbody>
-																	<tr>
+								<tr>
+								<td>
+									<p class="hangingindent">Bateman BL, Carrillo-Restrepo JC, Grisales-Betancur V, Reault S, 
+										<font color="#7e9094"><b>Long AM</b></font>, Grand J, Posnik ZA, DeLuca W, Linero-Triana D, Deppe JL,Wilsey C, Velásquez-Tibatá J (2025) 
+										<a target="_blank" rel="noopener noreferrer" href="https://media.audubon.org/2025-11/COP30%20report%20FINAL%20111025.pdf?_gl=1*130m3yu*_gcl_au*MjIwNTEyMDE4LjE3NjkxMjQ1OTM.*_ga*NDA3MjYzNDc5LjE3NjEzMjU3Mjk.*_ga_X2XNL2MWTT*czE3NjkyNjA3NDMkbzYwJGcxJHQxNzY5MjYwNzYyJGo0MSRsMCRoMA..">
+										Quiet Canopies: Climate Change Risk for Latin America’s Threatened Forest Birds</a>.
+										National Audubon Society, New York, USA.</p>
+									</td>
+								</tr>
+								<tr>
 								<td>
 									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font> (2024) 
 										<a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
-										Climate Watch Target Species 2016-2023</a>. National Audubon Society, New York.</p>
+										Climate Watch Target Species 2016-2023</a>. National Audubon Society, New York, USA.</p>
 									</td>
 								</tr>
 								<tr>
@@ -747,7 +756,7 @@
 									<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Reault S (2025)
 										<a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1805657941529?s=jvuiioajakxo2m7qxbb1lsboh5plzb01">
 											Impacts of Climate Change on Hammonasset Beach State Park in Connecticut: Improving Coastal Resiliency</a>.
-										National Audubon Society, New York.</p>
+										National Audubon Society, New York, USA.</p>
 									</td>
 								</tr>
 								</tfoot>
@@ -946,6 +955,7 @@
 
 	</body>
 </html>
+
 
 
 
