--- a/index.html
+++ b/index.html
@@ -215,23 +215,38 @@
 										<font color="#afbcc0"> • </font>Remote
 										<br>
 										<ul>
-											<li>Provides technical, scientific, and liaison expertise across Audubon’s internal and external network to support regional, national, and hemispheric bird conservation initiatives.</li>
+											<li>Provides technical, scientific, and liaison expertise across Audubon’s internal and external network to support regional, national, and hemispheric conservation initiatives, investigating how climate and land-use changes impact birds and ecosystems to inform landscape-scale conservation planning and decision-making.</li>
 										</ul>
 										<ol>
-											<li>Investigates how climate and land-use changes impact birds and ecosystems throughout the Americas to inform landscape-scale conservation planning and decision-making.</li>
-											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products for managers on-the-ground and scientific publications.</li>
-											<li>Utilizes ArcGIS, R, and Python to collect, manage, process, analyze, and communicate results of geospatial data science to diverse audiences.</li>
+											<li>Conducts spatial and statistical analysis to create cartographic and data-driven science products for scientific publications, technical reports, and presentations.</li>
+											<li>Optimizes spatial and non-spatial data collection, management, processing, and analysis utilizing R, Python, and ArcGIS to streamline automated workflows.</li>
+										</ol>
+
+										<ul>
+											<li>Leading the modeling of >200 migratory bird species distributions across the Americas to predict species responses to climate and land cover change, informing bird conservation actions and public policy change.</li>
+										</ul>
+										<ol>
+											<li>Collects, processes, analyzes, and manages >2 TB of spatial and non-spatial data using R, Python, ArcGIS, and Excel.</li>
+											<li>Optimized a manual review process cleaning observations for >1,000 species using R and Python, reducing the time to complete data cleaning of 20,000 outlier records for ~500 species from one year to two months.</li>
+										</ol>
+										
+										<ul>
+											<li>Manages ~100 GB of spatial and non-spatial data for Audubon’s community science program,
+												<i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/community-science/climate-watch">
+											Climate Watch</a></i>, a national program with >2,000 volunteers since 2016.</li>
+										</ul>
+										<ol>
+											<li>Optimized data cleaning of species observation data using R and Python to improve data integrity and reduce processing times from several days to ~two hours.</li>
+											<li>Cleaned, analyzed, and managed a database of >800,000 bird species observation points, facilitating the development of several scientific publications, technical reports, presentations, and communicating results for >2,000 community science volunteers.</li>
+											<li>Led the development of identifying data gaps in <i><a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
+											Audubon's Climate Watch Target Species</a></i> survey coverage to implement strategic outreach, increasing species data coverage by 155%.</li>
+											<li>Collaborated with cross-functional teams to improve program growth and access for volunteers, ensuring
+												<i><a target="_blank" rel="noopener noreferrer" href="https://experience.arcgis.com/experience/df8e63644679430ba8777d67ec0618c9">
+											Climate Watch GIS Tools</a></i> are user-friendly.</li>
 										</ol>
 										<ul>
-											<li>Developed a data cleaning process using R and Python to improve data integrity collected through Audubon's community science program
-												<i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/community-science/climate-watch">
-											Climate Watch</a></i>.</li>
+											<li>Assessed and organized an AWS workspace overhaul in collaboration with IT to clean >100 GB of user storage, ensuring machines don’t crash and reducing costs of use.</li>
 										</ul>
-										<ol>
-											<li>Cleaned, analyzed, and managed >800,000 data points collected since 2016.</li>
-											<li>Identified data gaps in <i><a target="_blank" rel="noopener noreferrer" href="https://nationalaudubon.app.box.com/file/1751539528489">
-											Climate Watch Target Species</a></i> survey coverage and the demographic representation of volunteers to implement strategic improvements to the program.
-										</ol>
 										<!-- <ul>
 											<li>Participates in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group that develops and/or implements processes that integrate Audubon’s EDIB Conservation Principles into our science and partnerships.</li>
 											<li>Joined Audubon's Access <i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/about/edi">
@@ -354,7 +369,7 @@
 										<li>Completed a workflow for project team to implement geospatial processing across 11+ international landscapes.</li>
 										<li>Assisted with the international transportation of field and lab equipment, implementing field sampling,
 											and training collaborators in field data collection following project protocols.</li>
-										<li>Developed and cultivated a strong rapport with collaborators in 5 countries.</li>
+										<li>Developed and cultivated a strong rapport with collaborators in five countries.</li>
 										<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 										<li>Implemented country-specific policies with data collection to support long-term collaborative conservation goals.</li>
 									</ol>
@@ -955,6 +970,7 @@
 
 	</body>
 </html>
+
 
 
 
