--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
 					<dl>
 						<dt>Technical Skills</dt>
 						<dd>
-							<p>R, Python, SQL, ESRI ArcGIS Desktop and Online, Spatial and Non-spatial Data Management,
-								Data Analysis and Visualization, Spatial and Statistical Analysis, Image Analysis, 
-								Remote Sensing, Digitizing, Carbon Analysis, SQL, HTML, CSS, JavaScript, SCSS, QGIS, 
+							<p>Programming Languages (R, Python, SQL), ESRI ArcGIS, Image Analysis, Remote Sensing, Digitizing, Carbon Analysis, SQL, HTML, CSS, JavaScript, SCSS, QGIS, 
 								Troubleshooting, Microsoft Office Suite (Access, Excel, PowerPoint, Word), Adobe Illustrator</p>
 						</dd>
 						<dt>Field Skills</dt>
@@ -970,6 +968,7 @@
 
 	</body>
 </html>
+
 
 
 
